added extension for texlipse

--- a/template.tex
+++ b/template.tex
@@ -6,7 +6,7 @@
 \begin{document}
     % /* abbreviations ------------------------------------------------------ */
     \begin{acronym}
-        \input{template.acro}
+        \input{template.acro.tex}
     \end{acronym}
     % /* -------------------------------------------------------------------- */
 
