--- a/template.config.tex
+++ b/template.config.tex
@@ -58,23 +58,13 @@ YYY Todo\inst{1}%
 
 % ---- Authors IEEE style ------------------------------
 %------------ Alex-----------------------
-\newcommand{\authorOne}{\IEEEauthorblockN{X. Todo}
-\metaInstituteFirst}
+\newcommand{\authorA}{\IEEEauthorblockN{X. Todo}\metaInstituteA}
+\newcommand{\metaInstituteA}{\IEEEauthorblockA{University X,
+City, Country\\ Department\\todo@example.org}}
 
-%----------- X Todo ------------------
-\newcommand{\authorTwo}{\IEEEauthorblockN{Y. Todo}
-\metaInstituteSecond}
-
-% -------- Institutions/Organisations -------------------------
-%--------- Uni Bonn ----------------------------
-\newcommand{\metaInstituteFirst}{\IEEEauthorblockA{University X,
-City, Country\\ Department\\
-todo@example.org}}
-
-%------------ X Todo -----------------------
-\newcommand{\metaInstituteSecond}{\IEEEauthorblockA{University Y,
-City, Country\\ Department\\
-todo@example.org}}
+\newcommand{\authorB}{\IEEEauthorblockN{Y. Todo}\metaInstituteB}
+\newcommand{\metaInstituteB}{\IEEEauthorblockA{University Y,
+City, Country\\ Department\\todo@example.org}}
 
 \newcommand{\metaSubject}{\metaConference~-~\metaConferenceArea} 
 
