--- a/template.tex
+++ b/template.tex
@@ -15,7 +15,7 @@
     %\frontmatter
     \title{\metaTitle}
     %\titlerunning{\metaTitleShort}
-    \author{\authorOne \and \authorTwo}
+    \author{\authorA \and \authorB}
     %\metaAuthorWithInst}
     %\authorrunning{\metaAuthorShort}
     %\institute{\metaInstituteFirst \and \metaInstituteSecond}
