--- a/template.tex
+++ b/template.tex
@@ -14,13 +14,6 @@
     % /* Meta data ---------------------------------------------------------- */
     %\frontmatter
     \title{\metaTitle}
-    %\titlerunning{\metaTitleShort}
-    \author{\authorA \and \authorB}
-    %\metaAuthorWithInst}
-    %\authorrunning{\metaAuthorShort}
-    %\institute{\metaInstituteFirst \and \metaInstituteSecond}
-    %\toctitle{\metaTitle}
-    %\tocauthor{\metaAuthorShort}
     \maketitle
     % /* -------------------------------------------------------------------- */
     
@@ -29,7 +22,10 @@
     \input{src/abstract}
     \end{abstract}
 
-    \begin{IEEEkeywords}\metaKeywords\end{IEEEkeywords}
+    %IEEE
+    %\begin{IEEEkeywords}\metaKeywords\end{IEEEkeywords}
+    %LLNCS
+    \keywords{\metaKeywords}
     % /* -------------------------------------------------------------------- */
     
     % /* -------------------------------------------------------------------- */
