--- a/src/analyze.tex
+++ b/src/analyze.tex
@@ -1,6 +1,11 @@
 \section{Analytical Model}\label{sec:analyze}
 
-Listing~\ref{lst:example}. See \figurename~\ref{fig:example1} and \figurename~\ref{fig:example2}. Also \tablename~\ref{tbl:table1} and \equationname~\ref{eq:var_idb}.
+Listing~\ref{lst:example}.
+See \figurename~\ref{fig:example1} and
+%\figurename~\ref{fig:example2}.
+
+Also \tablename~\ref{tbl:table1}.
+% and \equationname~\ref{eq:var_idb}.
 
 \lstset{language=Java, caption=Example Code, %
 label=lst:example, numbers=left, stepnumber=1}
