--- a/template.tex
+++ b/template.tex
@@ -38,8 +38,12 @@
     \input{src/discussion}
     \input{src/conclusions}
     \input{src/acknowledgements}
-    \bibliographystyle{IEEEtran}
-    \bibliography{\metaFilename}
+
+    %%for bibtex
+    %\bibliographystyle{IEEEtran}
+    %\bibliography{\metaFilename}
+    %%for biber
+    \printbibliography
     % to show unreferenced publications ------------------------------------- */
     %\bibliographystyle{unsrt}
     %\cite{dummy}
