--- a/src/analyze.tex
+++ b/src/analyze.tex
@@ -7,8 +7,7 @@ See \figurename~\ref{fig:example1} and
 Also \tablename~\ref{tbl:table1}.
 % and \equationname~\ref{eq:var_idb}.
 
-\lstset{language=Java, caption=Example Code, %
-label=lst:example, numbers=left, stepnumber=1}
+\lstset{language=Java, caption=Example Code, label=lst:example}
 \lstinputlisting{resources/code/example.java}
 
 \small
