--- a/template.config.tex
+++ b/template.config.tex
@@ -37,7 +37,9 @@
   doi=false,
   isbn=false,
   url=false,
+  %dashed=false
   ]{biblatex}
+%\renewbibmacro*{bbx:savehash}{}  % to enabled the "dashed=false" option in ieee
 \addbibresource{\metaFilename.bib}
 \usepackage[nolist]{acronym}     % For acronyms
 % ------------------------------------------------------------------------------
