options for ieee submissions

--- a/template.config.tex
+++ b/template.config.tex
@@ -72,6 +72,8 @@ menucolor=LinkColor,                  % Menu color
 hypertexnames=true                    % Whatever ;)
 ]{hyperref}                           % Use hyperlinks
 %\renewcommand*{\backref}[1]{[cited at page #1]} % Show formatted backlinks
+%\renewcommand{\url}[1]{#1}           % Disable hyperlinks for IEEEtran
+%\usepackage{nohyperref}              % Disable hyperlinks for IEEEtran
 % ------------------------------------------------------------------------------
 
 % meta data --------------------------------------------------------------------
