--- a/template.config.tex
+++ b/template.config.tex
@@ -74,6 +74,9 @@ hypertexnames=true                    % Whatever ;)
 %\renewcommand*{\backref}[1]{[cited at page #1]} % Show formatted backlinks
 %\renewcommand{\url}[1]{#1}           % Disable hyperlinks for IEEEtran
 %\usepackage{nohyperref}              % Disable hyperlinks for IEEEtran
+%\renewcommand*{\todo}[1]{}            % For submission
+%\renewcommand*{\todotext}[1]{}        % For submission
+%\renewcommand*{\sidenote}[1]{}        % For submission
 % ------------------------------------------------------------------------------
 
 % meta data --------------------------------------------------------------------
