--- a/template.config.tex
+++ b/template.config.tex
@@ -69,11 +69,12 @@ urlcolor=LinkColor,                   % URL color
 anchorcolor=LinkColor,                % Anchor color
 citecolor=LinkColor,                  % Cite color
 menucolor=LinkColor,                  % Menu color
-hypertexnames=true                    % Whatever ;)
+hypertexnames=true,                   % Whatever ;)
+draft,                                % Disable hyperlinks for IEEEtran / EDAS
 ]{hyperref}                           % Use hyperlinks
 %\renewcommand*{\backref}[1]{[cited at page #1]} % Show formatted backlinks
-%\renewcommand{\url}[1]{#1}           % Disable hyperlinks for IEEEtran
-%\usepackage{nohyperref}              % Disable hyperlinks for IEEEtran
+%\renewcommand{\url}[1]{#1}           % Disable hyperlinks for IEEEtran / EDAS
+%\usepackage{nohyperref}              % Disable hyperlinks for IEEEtran / EDAS
 %\renewcommand*{\todo}[1]{}            % For submission
 %\renewcommand*{\todotext}[1]{}        % For submission
 %\renewcommand*{\sidenote}[1]{}        % For submission
