--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -18,36 +18,25 @@
 % ------------------------------------------------------------------------------
 % (1) Define the research area (which particular area are we focusing?).
 % ------------------------------------------------------------------------------
-Define the research area (which particular area are we focusing?).
+\todoremark{area}\todo{one sentence about the research area (which particular area are we focusing?)}
 % ------------------------------------------------------------------------------
 % (2) Define the issue (what issue is getting to get solved?)
 % ------------------------------------------------------------------------------
-Define the issue (what issue is getting to get solved?)
+\todoremark{issue}\todo{one sentence about the issue (what issue is getting to get solved?)}
 % ------------------------------------------------------------------------------
 % (3) Shortcomings of existing solutions.
 % ------------------------------------------------------------------------------
-Shortcomings of existing solutions.
+\todoremark{related work}\todo{one sentence about the shortcomings of existing solutions.}
 % ------------------------------------------------------------------------------
 % (4) Define the own approach.
 % ------------------------------------------------------------------------------
-Define the own approach.
+\todoremark{approach}\todo{one sentence about the own approach}
 % ------------------------------------------------------------------------------
 % (5) How have we validated our results?
 % ------------------------------------------------------------------------------
-How have we validated our results?
+\todoremark{validation}\todo{one sentence about the validation of the results}
 % ------------------------------------------------------------------------------
 % (6) What have we shown / contributed? What is the result?
 % ------------------------------------------------------------------------------
-What have we shown / contributed? What is the result?
-
-The quick brown fox jumps over the lazy dog.
-The quick brown fox jumps over the lazy dog.
-The quick brown fox jumps over the lazy dog.
-The quick brown fox jumps over the lazy dog.
-The quick brown fox jumps over the lazy dog.
-The quick brown fox jumps over the lazy dog.
-The quick brown fox jumps over the lazy dog.
-The quick brown fox jumps over the lazy dog.
-The quick brown fox jumps over the lazy dog.
-The quick brown fox jumps over the lazy dog.
-The quick brown fox jumps over the lazy dog.
+\todoremark{result}\todo{one sentence about the main contribution}
+\todomid{about 150 characters}
