--- a/src/conclusions.tex
+++ b/src/conclusions.tex
@@ -21,14 +21,20 @@
 %-------------------------------------------------------------------------------
 %We have shown that\dots. The crucial results are\dots.  
 %-------------------------------------------------------------------------------
-We have shown that\dots. The crucial results are\dots.
+\sidenote{results}
+\todomid{We have shown that\dots}.
+\todomid{The crucial results are\dots.}
 
 %-------------------------------------------------------------------------------
 %Recipient of the results/improvements. Who gaines provit from this?
 %-------------------------------------------------------------------------------
-Recipient of the results/improvements. Who gains profit from this?
+\sidenote{benefits}
+\todomid{The presented work provides potential benefits for...}
 
 %-------------------------------------------------------------------------------
 %Further work: start with short-term, then long-term ojectives.
 % -------------------------------------------------------------------------------
-Further work: start with short-term, then long-term objectives.
+\sidenote{outlook}
+\todoshort{Our short-term goal is to...}
+\todoshort{In medium term, we ...}
+\todoshort{The long-term goals include...}
