--- a/src/main.tex
+++ b/src/main.tex
@@ -1,4 +1,4 @@
-\section{Analytical Model}\label{sec:analyze}
+\section{Main Part}\label{sec:main}
 
 Listing~\ref{lst:example}.
 See \figurename~\ref{fig:example1} and
