--- a/src/relatedwork.tex
+++ b/src/relatedwork.tex
@@ -9,11 +9,20 @@
 % How has !the battle between different approaches progressed? What are the major
 % outstanding problems? (This is where you come in.)
 % -------------------------------------------------------------------------------
-The literature survey is a broad and shallow account of the field, which helps
-to place the contribution of the paper in context. It is part of the motivation
-of the paper, because it helps to identify the gap that this work is trying to
-fill, and explain why it is important to fill this gap. Rather than a list of
-disconnected accounts of other people's work, you might want to organize it
-into a story: What are the rival approaches? What are the drawbacks of each?
-How has !the battle between different approaches progressed? What are the major
-outstanding problems? (This is where you come in.)
+\sidenote{intro}
+In order to place the contribution of the paper in context
+  and identify the gap the work is intended to fill,
+  we provide a short literature survey.
+\todoshort{This survey focuses on...}.
+
+\sidenote{gap 1}
+\todotext{related work 1}
+
+\sidenote{gap 2}
+\todotext{related work 2}
+
+\sidenote{gap 3}
+\todotext{related work 3}
+
+\sidenote{issue}
+\todotext{outstanding problem}
