--- a/template.config.tex
+++ b/template.config.tex
@@ -70,7 +70,7 @@ anchorcolor=LinkColor,                % Anchor color
 citecolor=LinkColor,                  % Cite color
 menucolor=LinkColor,                  % Menu color
 hypertexnames=true,                   % Whatever ;)
-draft,                                % Disable hyperlinks for IEEEtran / EDAS
+%draft,                                % Disable hyperlinks for IEEEtran / EDAS
 ]{hyperref}                           % Use hyperlinks
 %\renewcommand*{\backref}[1]{[cited at page #1]} % Show formatted backlinks
 %\renewcommand{\url}[1]{#1}           % Disable hyperlinks for IEEEtran / EDAS
