--- a/template.meta.tex
+++ b/template.meta.tex
@@ -1,5 +1,6 @@
 % meta data --------------------------------------------------------------------
-\newcommand{\metaTitle}{A Nice Descriptive Title without Abbreviations}
+\newcommand{\metaTitle}{A Nice Descriptive Title without Abbreviations} % PDF compliant
+\newcommand{\metaTitleLong}{A Nice Descriptive Title\\without Abbreviations}
 \newcommand{\metaTitleShort}{Nice Short Title}
 \newcommand{\metaConference}{Conference Name}
 \newcommand{\metaConferenceArea}{Conference Area}
