--- a/template.tex
+++ b/template.tex
@@ -13,7 +13,7 @@
 
     % /* Meta data ---------------------------------------------------------- */
     %\frontmatter
-    \title{\metaTitle}
+    \title{\metaTitleLong}
     \maketitle
     % /* -------------------------------------------------------------------- */
     
@@ -32,10 +32,8 @@
     %\mainmatter
     \input{src/introduction}
     \input{src/relatedwork}
-    \input{src/assumptions}
-    \input{src/analyze}
+    \input{src/main}
     \input{src/evaluation}
-    \input{src/discussion}
     \input{src/conclusions}
     \input{src/acknowledgements}
 
