--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -29,86 +29,89 @@
 % context, and a preview. Repeating the abstract in the introduction is a waste
 % of space.
 % ------------------------------------------------------------------------------
-What is the problem? Motivation: broadly, what is problem area,
-why important? Open up the subject (the subject will be electromagnetic
-fields in cylindrical dielectric geometric, adaptive arrays in packet radio,
-or whatever.)
-Introduce problem, outline the solution; the statement of the problem must
-include a clear statement why the problem is important (or interesting). In
-the case of a conference, make sure to cite the work of the PC co-chairs and
-as many other PC members as are remotely plausible, as well as from anything
-relevant from the previous two proceedings. In the case of a journal or
-magazine, cite anything relevant from last 2-3 years or so volumes. Avoid
-stock and cliche phrases. Be sure that the introduction lets
-the reader know what this paper is about, not just how important your general
-area of research is. Readers will not stick with you for three pages to find out
-what you are talking about.
-The introduction must motivate your work by pinpointing the problem you are
-addressing and then give an overview of your approach and/ or contributions
-(and perhaps even a general description of your results). In this way, the
-intro sets up my expectations for the rest of your paper -- it provides the
-context, and a preview. Repeating the abstract in the introduction is a waste
-of space.
+\sidenote{motivation}
+\todotext{
+One paragraph:
+What is the problem? What is problem area. Open up the subject.
+}
 
 % ------------------------------------------------------------------------------
 % (2) Why is it interesting and important? Why is it hard? (e.g., why do
 % naive approaches fail?) Narrow down: what is problem you specifically
 % consider? Describe the problem addressed in this paper.
 % ------------------------------------------------------------------------------
+\sidenote{importance}
+\todotext{
+One paragraph:
 Why is it interesting and important? Why is it hard? (e.g., why do
 naive approaches fail?) Narrow down: what is problem you specifically
 consider? Describe the problem addressed in this paper.
+}
 
 % ------------------------------------------------------------------------------
 % (3) Survey past work relevant to this paper. Why hasn't it been solved
 % before (related work)? Or, what's wrong with previous proposed solutions? How
 % does mine differ?
 % ------------------------------------------------------------------------------
+\sidenote{related work}
+\todotext{
+One paragraph:
 Survey past work relevant to this paper. Why hasn't it been solved
 before (related work)? Or, what's wrong with previous proposed solutions? How
 does mine differ?
+}
 
 % ------------------------------------------------------------------------------
 % (4) Describe the assumptions made in general terms, and state what results
 % have been obtained. This gives the reader an initial overview of what problem
 % is addressed in the paper and what has been achieved.
 % ------------------------------------------------------------------------------
+\sidenote{assumption}
 In this paper, we assume ...
+\todotext{
+One paragraph: what are the assumptions
+}
 
 % ------------------------------------------------------------------------------
 % (5) What are the key components of my approach and results? Also include any
-% specific limitations. ``In the paper, we ...": most crucial paragraph, tell
+% specific limitations. It's the most crucial paragraph, tell
 % your elevator pitch: How is it different/better/relates to other work?
+% Help the reviewer to get the scientific surplus value between all
+% the motivation and basics.
 % ------------------------------------------------------------------------------
+
+% ------------------------------------------------------------------------------
+\sidenote{contributions}
+The main contribution of this paper is...
+\todotext{
 What are the key components of my approach and results? Also include any
-specific limitations. ``In the paper, we ...": most crucial paragraph, tell
+specific limitations. It's the most crucial paragraph, tell
 your elevator pitch: How is it different/better/relates to other work?
+Help the reviewer to get the scientific surplus value between all
+the motivation and basics.
+}
 
 % ------------------------------------------------------------------------------
 % (6) How have we validated our results?
 % ------------------------------------------------------------------------------
+\sidenote{validation}
+We have validated our approach by...
+\todotext{
 How have we validated our results?
+}
 
 % ------------------------------------------------------------------------------
-% (7) The second last item should start with "The contribution of this paper
-% is..." to help the reviewer to get the scientific surplus value between all
-% the motivation and basics.
-% ------------------------------------------------------------------------------
-The second last item must start with "The contribution of this paper
-is..." to help the reviewer to get the scientific surplus value between all
-the motivation and basics.
-
-% ------------------------------------------------------------------------------
-% (8) ``The remainder of this paper is structured as follows...''. The last
+% (7) ``The remainder of this paper is structured as follows...''. The last
 % section must give an overview of the paper.
 % ------------------------------------------------------------------------------
-The remainder of the paper is structured as follows. We give a brief overview of
-related work in the context of CHANGEME
-in \sectionname~\ref{sec:relatedwork}. In \sectionname~\ref{sec:problem}, we
-state the problem addressed and the terminology used along the paper. We also
-present CHANGEME. In the subsequent \sectionname~\ref{sec:analyze} the
-CHANGEME is presented. The results obtained from CHANGEME is discussed in
-\sectionname~\ref{sec:evaluation}. Finally, we close giving some conclusions
-and considerations and describe future work in
-\sectionname~\ref{sec:conclusions}.
+\sidenote{structure}
+The remainder of the paper is structured as follows.
+We give a brief overview of related work in the context of \todo{CHANGEME}
+  in \sectionname~\ref{sec:relatedwork}.
+In the subsequent \sectionname~\ref{sec:main} the
+    \todo{CHANGEME} system is presented. 
+The evaluation results obtained from \todo{CHANGEME} is discussed in
+  \sectionname~\ref{sec:evaluation}.
+Finally, we close giving some conclusions and considerations
+  and describe future work in \sectionname~\ref{sec:conclusions}.
 % ------------------------------------------------------------------------------
