moving from acronym package to acro package

--- a/template.acro.tex
+++ b/template.acro.tex
@@ -1,2 +1,1 @@
-
-\acro{TODPM}{TCP Option to Denote Packet Mood}
+\DeclareAcronym{FIRE}{short={FIRE}, long={Future Internet Research and Experimentation}, cite={Gavras:2007:FIR:1273445.1273460}, long-post={\protect\footnote{\url{http://ict-fire.eu}}}}
