--- a/template.tex
+++ b/template.tex
@@ -1,14 +1,15 @@
 % /* include config --------------------------------------------------------- */
 \newcommand{\metaFilename}{template}
 \input{\metaFilename.config.tex}
+\input{\metaFilename.acro.tex} % acro package
 % /* ------------------------------------------------------------------------ */
 
 % /* begin paper ------------------------------------------------------------ */
 \begin{document}
-    % /* abbreviations ------------------------------------------------------ */
-    \begin{acronym}
-        \input{\metaFilename.acro.tex}
-    \end{acronym}
+    % /* acronym package ---------------------------------------------------- */
+    %\begin{acronym}
+    %    \input{\metaFilename.acro.tex}
+    %\end{acronym}
     % /* -------------------------------------------------------------------- */
 
     % /* Meta data ---------------------------------------------------------- */
