--- a/template.bib
+++ b/template.bib
@@ -25,3 +25,19 @@
   day="1",  
   url="http://www.ietf.org/rfc/rfc5841.txt",
 }
+
+@article{Gavras:2007:FIR:1273445.1273460,
+address = {New York, NY, USA},
+author = {Gavras, Anastasius and Karila, Arto and Fdida, Serge and May, Martin and Potts, Martin},
+doi = {10.1145/1273445.1273460},
+issn = {0146-4833},
+journal = {ACM SIGCOMM Computer Communication Review},
+keywords = {experimentation,future internet,network architecture,network neutrality,situated and autonomic communications,testbed},
+number = {3},
+pages = {89--92},
+publisher = {ACM},
+title = {{Future Internet Research and Experimentation: The FIRE Initiative}},
+url = {http://doi.acm.org/10.1145/1273445.1273460},
+volume = {37},
+year = {2007}
+}
