--- a/template.config.tex
+++ b/template.config.tex
@@ -41,7 +41,8 @@
   ]{biblatex}
 %\renewbibmacro*{bbx:savehash}{}  % to enabled the "dashed=false" option in ieee
 \addbibresource{\metaFilename.bib}
-\usepackage[nolist]{acronym}     % For acronyms
+%\usepackage[nolist]{acronym}     % For acronyms
+\usepackage{acro}     % For acronyms
 % ------------------------------------------------------------------------------
 
 
