--- a/template.tex
+++ b/template.tex
@@ -14,7 +14,7 @@
 
     % /* Meta data ---------------------------------------------------------- */
     %\frontmatter
-    \title{\metaTitleLong}
+    \title{\metaTitle}
     \maketitle
     % /* -------------------------------------------------------------------- */
     
