--- a/template.config.tex
+++ b/template.config.tex
@@ -71,6 +71,7 @@ anchorcolor=LinkColor,                % Anchor color
 citecolor=LinkColor,                  % Cite color
 menucolor=LinkColor,                  % Menu color
 hypertexnames=true,                   % Whatever ;)
+pdfencoding=auto,
 %draft,                                % Disable hyperlinks for IEEEtran / EDAS
 ]{hyperref}                           % Use hyperlinks
 %\renewcommand*{\backref}[1]{[cited at page #1]} % Show formatted backlinks
