--- a/template.config.tex
+++ b/template.config.tex
@@ -47,6 +47,7 @@
 
 
 % hyperlinks (last package) ----------------------------------------------------
+\usepackage{hyperxmp}                 % Semantic meta data (RDF/XMP)
 \usepackage[pdftex,                   % Hyperlinks in PDFs
 raiselinks=true,			          % calculate real height of the link
 breaklinks,                           % break links
