--- a/template.meta.tex
+++ b/template.meta.tex
@@ -1,3 +1,7 @@
+% existing authors list --------------------------------------------------------
+\IfFileExists{global-do-not-edit.authors.tex}{\input{global-do-not-edit.authors.tex}}{}
+% ------------------------------------------------------------------------------
+
 % meta data --------------------------------------------------------------------
 \newcommand{\metaTitle}{A Nice Descriptive Title\texorpdfstring{\\}{} without Abbreviations}
 \newcommand{\metaTitleShort}{Nice Short Title}
@@ -34,7 +38,7 @@
 \authorrunning{\metaAuthorYYY et al.}
 \tocauthor{\metaAuthorYYY, \metaAuthorXXX}
 \institute{\metaInstYYY\\
-\email{\metaMailYYY}
+\email{\metaMailWillner}
 \and
 \metaInstXXX\\
 \email{\metaMailXXX}
