--- a/template.tex
+++ b/template.tex
@@ -2,6 +2,7 @@
 \newcommand{\metaFilename}{template}
 \input{\metaFilename.config.tex}
 \input{\metaFilename.acro.tex} % acro package
+\IfFileExists{global-do-not-edit.acro.tex}{\input{global-do-not-edit.acro.tex}}{}
 % /* ------------------------------------------------------------------------ */
 
 % /* begin paper ------------------------------------------------------------ */
