--- a/template.acro.tex
+++ b/template.acro.tex
@@ -1,1 +1,1 @@
-\DeclareAcronym{FIRE}{short={FIRE}, long={Future Internet Research and Experimentation}, cite={Gavras:2007:FIR:1273445.1273460}, long-post={\protect\footnote{\url{http://ict-fire.eu}}}}
+\DeclareAcronym{WATER}{short={WATER}, long={Wide Area Terminal Experimentation and Research}, cite={Gavras:2007:FIR:1273445.1273460}, long-post={\protect\footnote{\url{http://ict-water.eu}}}}
