--- a/src/relatedwork.tex
+++ b/src/relatedwork.tex
@@ -13,7 +13,7 @@
 In order to place the contribution of the paper in context
   and identify the gap the work is intended to fill,
   we provide a short literature survey.
-\todoshort{This survey focuses on \ac{FIRE}...}.
+\todoshort{This survey focuses on \ac{WATER}...}.
 
 \sidenote{gap 1}
 \todotext{related work 1}
