--- a/template.meta.tex
+++ b/template.meta.tex
@@ -38,7 +38,7 @@
 \authorrunning{\metaAuthorYYY et al.}
 \tocauthor{\metaAuthorYYY, \metaAuthorXXX}
 \institute{\metaInstYYY\\
-\email{\metaMailWillner}
+\email{\metaMailYYY}
 \and
 \metaInstXXX\\
 \email{\metaMailXXX}
