reset acronyms after abstract

--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -40,3 +40,4 @@
 % ------------------------------------------------------------------------------
 \todoremark{result}\todo{one sentence about the main contribution}
 \todomid{about 150 characters}
+\acresetall
