cleanup and replaced subfig

--- a/src/00_abstract.tex
+++ b/src/00_abstract.tex
@@ -18,7 +18,7 @@
 % ------------------------------------------------------------------------------
 % (1) Define the research area (which particular area are we focusing?).
 % ------------------------------------------------------------------------------
-\todoremark{area}\todo{one sentence about the research area (which particular area are we focusing?)}
+\todoremark{area}\todo{one sentence about the research area (which broad area are we considering?)}
 % ------------------------------------------------------------------------------
 % (2) Define the issue (what issue is getting to get solved?)
 % ------------------------------------------------------------------------------
@@ -38,6 +38,6 @@
 % ------------------------------------------------------------------------------
 % (6) What have we shown / contributed? What is the result?
 % ------------------------------------------------------------------------------
-\todoremark{result}\todo{one sentence about the main contribution}
+\todoremark{result}\todo{one sentence about the main contribution and an outlook}
 \todomid{about 150 characters}
 \acresetall
