--- a/src/03_approach.tex
+++ b/src/03_approach.tex
@@ -1,10 +1,6 @@
 \section{Main Part}\label{sec:main}
 
-Listing~\ref{lst:example}.
-See \figurename~\ref{fig:example1} and
-%\figurename~\ref{fig:example2}.
-
-Also \tablename~\ref{tbl:table1}.
+See \autoref{lst:example} and \autoref{tbl:table1}.
 % and \equationname~\ref{eq:var_idb}.
 
 \lstset{language=Java, caption=Example Code, label=lst:example}
@@ -24,27 +20,6 @@ Also \tablename~\ref{tbl:table1}.
   \label{eq:var_idb}
 \end{equation}
 \normalsize
-
-\begin{figure}
-    \centering
-    \includegraphics[width=.45\textwidth]{resources/images/example1.pdf} 
-    \caption{Example image.}
-    \label{fig:example1}
-\end{figure}
-
-\begin{figure}
-    \centering
-    \subfloat[example2]{
-        \label{fig:example2}
-        \includegraphics[width=.2\textwidth]{resources/images/example2.pdf}
-    }
-    \subfloat[example3]{
-        \label{fig:example3}
-        \includegraphics[width=.2\textwidth]{resources/images/example3.pdf} 
-    }
-    \caption{Example images.}
-    \label{fig:exammple2_3}
-\end{figure}
 
 \begin{table}
     \centering
