added ieee copyright example

--- a/template.tex
+++ b/template.tex
@@ -4,6 +4,7 @@
 \input{\metaFilename.acro.tex} % acro package
 \IfFileExists{global-do-not-edit.acro.tex}{\input{global-do-not-edit.acro.tex}}{}
 \AtBeginDocument{\let\textlabel\label}
+\ieeecopyright{.2}{0.055}{978-1-4799-1234-5/67/\$31.00~\copyright~2015~IEEE}
 % /* ------------------------------------------------------------------------ */
 
 % /* begin paper ------------------------------------------------------------ */
@@ -19,7 +20,7 @@
     \title{\metaTitle}
     \maketitle
     % /* -------------------------------------------------------------------- */
-    
+
     % /* -------------------------------------------------------------------- */
     \begin{abstract}
     \input{src/00_abstract}
@@ -30,7 +31,7 @@
     %LLNCS
     \keywords{\metaKeywords}
     % /* -------------------------------------------------------------------- */
-    
+
     % /* -------------------------------------------------------------------- */
     %\mainmatter
     \input{src/01_introduction}
