--- a/template.config.tex
+++ b/template.config.tex
@@ -106,6 +106,7 @@ pdfencoding=auto,
 %\renewcommand*{\todo}[1]{}            % For submission
 %\renewcommand*{\todotext}[1]{}        % For submission
 %\renewcommand*{\sidenote}[1]{}        % For submission
+\usepackage{cleveref}                 % To ref footnotes twice (use after hyperref)
 % ------------------------------------------------------------------------------
 
 % meta data --------------------------------------------------------------------
