add float package

--- a/template.config.tex
+++ b/template.config.tex
@@ -28,6 +28,7 @@
 
 % basic config -----------------------------------------------------------------
 \input{lib/resources/config/default}
+\usepackage{float}                % Provides the H float modifier option
 %\usepackage{cite}                % Cite references %%for bibtex
 \usepackage[backend=biber,
   style=ieee,
