addded numeric-comp

--- a/template.config.tex
+++ b/template.config.tex
@@ -31,7 +31,7 @@
 \usepackage{float}                % Provides the H float modifier option
 %\usepackage{cite}                % Cite references %%for bibtex
 \usepackage[backend=biber,
-  style=ieee,
+  style=ieee,%numeric-comp
   maxnames=3,
   maxcitenames=3,
   maxbibnames=3,
