updates for TexLive 2016

--- a/template.bib
+++ b/template.bib
@@ -1,3 +1,15 @@
+@book{Foster:2004,
+author = {Foster, Ian and Kesselman, Carl},
+edition = {2nd},
+isbn = {978-1558609334},
+keywords = {Grid},
+mendeley-groups = {willner-proposal,willner-dfg,paper-2014-oscon,paper-2014-trescimo,phd-thesis,paper-2015-fiddle,paper-2015-fiteagle,paper-2015-tosca,paper-2015-iswc},
+pages = {748},
+publisher = {Morgan Kaufmann},
+title = {{The Grid 2: Blueprint for a New Computing Infrastructure}},
+year = {2003}
+}
+
 @misc{rfc748,
   author="M.R. Crispin",
   title="{Telnet randomly-lose option}",
