--- a/template.acro.tex
+++ b/template.acro.tex
@@ -1,1 +1,3 @@
+
+\DeclareAcronym{Grid Computing}{short={Grid Computing}, long={Grid Computing}, cite={Foster:2004}, long-post={\acfootnote{\url{http://swoogle.umbc.edu}}}, class=exclude}
 \DeclareAcronym{WATER}{short={WATER}, long={Wide Area Terminal Experimentation and Research}, cite={Gavras:2007:FIR:1273445.1273460}, long-post={\protect\footnote{\url{http://ict-water.eu}}}}
